--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= csrf_meta_tags %>
     <%= javascript_include_tag 'application' %>
+    <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   </head>
 
   <body>
