--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -5,6 +5,7 @@
   window.keyMatch = "<%= ENV['LEMON_PARTY_TOKEN'] %>"
   window.keyMatch2 = "<%= ENV['LEMON_PARTY_TOKEN_2'] %>"
   window.keyMatch3 = "<%= ENV['LEMON_PARTY_TOKEN_3'] %>"
+  window.keyMatch4 = "<%= ENV['LEMON_PARTY_TOKEN_4'] %>"
   window.CLOUDINARY_OPTIONS = {
     cloud_name: "<%= ENV['CLOUD_NAME'] %>",
     upload_preset: "<%= ENV['UPLOAD_PRESET'] %>"
