--- a/app/assets/stylesheets/sffoodtrucks.scss
+++ b/app/assets/stylesheets/sffoodtrucks.scss
@@ -1149,6 +1149,10 @@ textarea {
   background-color: $pale-light-yellow;
 }
 
+.pale-REAL {
+  background-color: $pale-light-yellow;
+}
+
 .pale-Lime {
   background-color: $pale-lime;
 }
